[build-system]
requires = ["setuptools", "wheel"]

[project]
name = "mr-prog-utils"
authors = [
    {name = "wchill"}
]
description = "Utils for Mr. Prog"
requires-python = ">=3.8"
version = "1.0"
dependencies = [
    "aio-pika",
    "asyncio-mqtt",
    "discord.py",
    "jsonpickle",
    "mmbn-gamedata",
    "psutil",
    "py-cpuinfo",
    "python-logging-rabbitmq",
    "pillow"
]

[tool.setuptools]
platforms = ["linux"]

[tool.black]
line-length = 120
target-version = ['py38']

[tool.isort]
profile = "black"
multi_line_output = 3
py_version = 38
